@@ -9,7 +9,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 @Service // @Profile("dev")
 public class DatabaseSeederDev {
@@ -34,7 +34,7 @@ public class DatabaseSeederDev {
 
     private void deleteAllAndInitialize() {
         LogManager.getLogger(this.getClass()).warn("------- Delete All -------");
-       // this.userDao.deleteAll();
+        this.userDao.deleteAll();
         this.databaseStarting.initialize();
     }
 
@@ -44,9 +44,9 @@ public class DatabaseSeederDev {
         UserEntity[] users = {
                 UserEntity.builder().userName("110").email("10").familyName("Name1")
                         .password(pass)
-                        .role(Role.CUSTOMER).registrationDate(LocalDateTime.now()).build()
+                        .role(Role.CUSTOMER).registrationDate(LocalDateTime.now()).build(),
         };
-        this.userDao.saveAll(Arrays.asList(users));
+        this.userDao.saveAll(List.of(users));
         LogManager.getLogger(this.getClass()).warn("        ------- users");
     }
 
